# file-storage

./: .env  .env.prod  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  ruff.toml
app/: config.py  constants.py  database.py  exceptions.py  find_delete_file.py  hasher.py  main.py  repository.py  routers.py  schemas.py  services.py
app/auth/: routers.py  service.py
app/create_directory/: create_directory.py
app/db/: database.py  models.py  repositories.py  repository.py  router.py
app/file_hasher/: filehasher.py
app/file_manager/: directory_manager.py  file_manager.py  hasher.py
app/files/: routers.py  services.py
app/migrations/: env.py
app/migrations/versions/: 2024_05_05_0137-7d3e619c9755_create_table_useres.py
helpers/: data_filler_from_sql.py
helpers/sql/: users.sql
migrations/: env.py
sql/: script_filling_data.py  users.sql
