[project]
name = "file-storage"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Shakir", email = "shakir.akgubaev@mail.ru"},
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
