[project]
name = "file-storage"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Shakir", email = "shakir.akgubaev@mail.ru"},
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pydantic-settings>=2.2.1",
    "sqlalchemy>=2.0.29",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "python-jose>=3.3.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
